# comic-chat

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  build.zig  build.zig.zon  onyx_tls_root.zig  source_ui_assets.zig
.ai/: WORKFLOW.md  model-routing.json
.ai/tasks/: CC-20260721-01.md  CC-20260721-02.md  CC-20260721-03.md  CC-20260722-02.md  CC-20260722-03.md  CC-20260722-04.md  CC-20260722-05.md  CC-20260722-06.md  CC-20260722-07.md  CC-20260722-08.md  CC-20260722-09.md  CC-20260722-10.md  CC-20260722-31.md  CC-20260722-32.md  CC-20260722-33.md
.ai/templates/: task-contract.md
.claude/: settings.json
.claude/agents/: cpp-build-fix-drafter.md  cpp-concurrency-reviewer.md  cpp-correctness-security-reviewer.md  cpp-engineer.md  cpp-native-platform-reviewer.md  dependency-security-reviewer.md  fast-inventory.md  fuzz-test-engineer.md  implementation-drafter.md  native-ui-reviewer.md  protocol-researcher.md  render-fidelity-researcher.md  security-reviewer.md  verification-reviewer.md  visual-asset-engineer.md
.codex/: config.toml
.codex/agents/: comicchat-accessibility-reviewer.toml  comicchat-adversarial-reviewer.toml  comicchat-architect.toml  comicchat-client-ui-engineer.toml  comicchat-cpp-build-fixer.toml  comicchat-cpp-concurrency-reviewer.toml  comicchat-cpp-correctness-security-reviewer.toml  comicchat-cpp-engineer.toml  comicchat-cpp-native-platform-reviewer.toml  comicchat-dependency-security-reviewer.toml  comicchat-explorer.toml  comicchat-fast-inventory.toml  comicchat-fuzz-test-engineer.toml  comicchat-integration-worker.toml  comicchat-integrator.toml  comicchat-linux-platform-engineer.toml  comicchat-verifier.toml  (+20 more)
.github/: copilot-instructions.md
docs/: AI-DEVELOPMENT-WORKFLOW.md  CHANGELOG.md  CPP26-ENGINEERING.md  IRCv3-COVERAGE.md  MICROSOFT_WIRE_AUDIT.md  MODERNIZATION.md  PORTABLE_ASSET_PROVENANCE.md  PORTABLE_COMPLETENESS_AUDIT.md  PORTABLE_UI_PARITY_PLAN.md  PROJECT_STRUCTURE.md  PROTOCOL.md  ROADMAP.md  TRANSPORT-RETIREMENT.md  UI_LIBRARY.md  UNOFFICIAL-RELEASE.md  WORKERS.md  dpi-awareness.md  index.html  ircv3-internals.md  render-port-spec.md  tls.md
legacy/: .gitignore  BUILDING.md  NOTICE.txt  PROVENANCE.md  README.md  UPSTREAM-SHA256SUMS.txt  build.cmd
packaging/: README.md  comicchat-mime.xml  comicchat.desktop  install-windows-associations.ps1
portable/: README.md  meson.build  meson_options.txt
portable/assets/icons/: README.md  manifest.json  meson.build
portable/cross/: x86_64-w64-mingw32-clang.ini
portable/include/: threading_alt.h
portable/include/comicchat/: assets.hpp  avatar_assets.hpp  backdrop.hpp  balloon.hpp  comic_page.hpp  config.hpp  cpp26.hpp  crypto_runtime.hpp  expression.hpp  formatting.hpp  layout.hpp  mbedtls_user_config.h  memory.hpp  page.hpp  render.hpp  scheduler.hpp  sound.hpp  source_raster.hpp  text.hpp  thread_compat.hpp  urldetect.hpp
portable/include/comicchat/net/: connection_engine.hpp  dcc_transfer_engine.hpp  flood.hpp  ircv3.hpp  native_session.hpp  private_config.hpp  sts_policy_store.hpp  sts_session.hpp
portable/packaging/linux/: io.github.devinkbrown.ComicChatReinked.desktop  io.github.devinkbrown.ComicChatReinked.metainfo.xml
portable/src/: app.cpp  assets.cpp  avatar_assets.cpp  backdrop.cpp  balloon.cpp  comic_page.cpp  compose_input.hpp  config.cpp  crypto_runtime.cpp  expression.cpp  formatting.cpp  layout.cpp  memory.cpp  page.cpp  render.cpp  scheduler.cpp  sound.cpp  source_raster.cpp  text.cpp  urldetect.cpp
portable/src/net/: connection_engine.cpp  dcc_transfer_engine.cpp  ircv3.cpp  native_session.cpp  private_config.cpp  sts_policy_store.cpp  sts_session.cpp
portable/subprojects/: catch2.wrap  glib.wrap  gvdb.wrap  icu.wrap  libffi.wrap  libuv.wrap  pcre2.wrap  proxy-libintl.wrap  sdl3.wrap  sysprof.wrap
portable/subprojects/packagefiles/: icu-78.3-version.patch
portable/subprojects/packagefiles/libuv/: meson.build
portable/subprojects/packagefiles/sdl3/: meson.build
portable/subprojects/packagefiles/sdl3/src/audio/: meson.build
portable/subprojects/packagefiles/sdl3/src/core/unix/: meson.build
portable/subprojects/packagefiles/sdl3/src/gpu/metal/: meson.build
portable/subprojects/packagefiles/sdl3/src/joystick/gdk/: meson.build
portable/subprojects/packagefiles/sdl3/src/video/: meson.build
portable/subprojects/packagefiles/sdl3/src/video/x11/: meson.build
portable/tests/: assets_test.cpp  avatar_assets_test.cpp  backdrop_test.cpp  bench.cpp  comic_page_test.cpp  config_test.cpp  dcc_transfer_test.cpp  expression_test.cpp  format_render_test.cpp  formatting_test.cpp  ircv3_test.cpp  layout_test.cpp  memory_test.cpp  native_session_test.cpp  page_test.cpp  render_test.cpp  runtime_test.cpp  sound_test.cpp  source_raster_test.cpp  sts_policy_store_test.cpp  sts_session_test.cpp  text_test.cpp  transport_test.cpp  urldetect_test.cpp
portable/tests/fixtures/irc/: inspircd.txt  ircu.txt  orochi.txt  solanum.txt  unrealircd.txt
portable/tools/: avatar_oracle.cpp
scripts/: build-modern-icons.py  check-transport-ownership.py  package-modern-builds.ps1  smoke-test-modern-builds.ps1  verify-v1-cpp26-substrate.py
src/: main.zig  root.zig
tools/: ai_route.py  generate_font.py  generate_ui_font.py  import_pinned_xeno.sh  onyx-tls-sources.txt  package-release.sh  package_generated_avb.py  package_generated_bgb.py  split_generated_pose_sheet.py  split_pose_sheet.py
v1.0-pre-modern/: chat.mak  cpp26mode.h  irc.cpp  ircsock.h  mainfrm.cpp  mainfrm.h  setupdlg.cpp  stdafx.h  textpose.cpp  transportadapter.h
v2.5-beta-1-modern/: actions.cpp  arc.cpp  autopage.cpp  autopage.h  avatar.cpp  avatar.h  avbfile.cpp  avbfile.h  backdrop.cpp  backdrop.h  balloon.cpp  bodycam.cpp  bodycam.h  chat.cpp  chat.h  chat.mak  chat.rc  chatbars.cpp  chatbars.h  chatdoc.cpp  chatsrv.cpp  chatsrv.h  chatview.cpp  chatview.h  chicdial.cpp  cpp26mode.h  defines.h  dib.cpp  dib.h  doskey.cpp  filesend.cpp  filesend.h  histent.cpp  iconcatalog.h  ircproto.cpp  ircproto.h  ircsock.cpp  ircsock.h  ircv3eventbridge.h  mainfrm.cpp  (+45 more)
(+148 files in other folders)
